# ploxd

./: CMakeLists.txt  README.md  create_policy.py
include/: debug.h  util.h
src/: CMakeLists.txt
src/container/: CMakeLists.txt  interposition.cc  libc_private.h
src/overlay/: CMakeLists.txt  interposition.cc  interposition.h
src/ploxd/: CMakeLists.txt  commands.h  containerd.cc  plox.cc  ploxd.cc  policy.cc  policy.h
src/shim/: CMakeLists.txt  interposition.cc
tests/: CMakeLists.txt  fdb_test.c
